--- a/5_Symbols/render.html
+++ b/5_Symbols/render.html
@@ -2,42 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workflow Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="menu-placeholder"></div>
-    <div class="container" id="render-content">
-        <h1>Loading...</h1>
-    </div>
+<body class="bg-dark text-light">
+    <header id="header-placeholder"></header>
 
+    <main class="container" style="margin-top: 80px;">
+        <div class="row">
+            <div class="col-md-10 mx-auto" id="render-content">
+                <h1>Loading...</h1>
+            </div>
+        </div>
+    </main>
+
+    <div id="footer-placeholder"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="shared-menu.js" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const params = new URLSearchParams(window.location.search);
             const page = params.get('page');
+            const renderContent = document.getElementById('render-content');
 
             if (page) {
-                // Basic security check to ensure we are only fetching local markdown files
                 if (page.startsWith('../') && page.endsWith('.md')) {
                     fetch(page)
                         .then(response => response.ok ? response.text() : Promise.reject('File not found'))
-                        .then(text => {
-                            document.getElementById('render-content').innerHTML = marked.parse(text);
-                        })
+                        .then(text => { renderContent.innerHTML = marked.parse(text); })
                         .catch(err => {
                             console.error('Failed to load content:', err);
-                            document.getElementById('render-content').innerHTML = '<h1>Error: Document not found.</h1>';
+                            renderContent.innerHTML = '<h1>Error: Document not found.</h1>';
                         });
                 } else {
-                     document.getElementById('render-content').innerHTML = '<h1>Error: Invalid document path.</h1>';
+                    renderContent.innerHTML = '<h1>Error: Invalid document path.</h1>';
                 }
             } else {
-                document.getElementById('render-content').innerHTML = '<h1>No document specified.</h1>';
+                renderContent.innerHTML = '<h1>No document specified.</h1>';
             }
         });
     </script>
-<div id="footer-placeholder"></div>
 </body>
 </html>
