--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -4,117 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docker Containerization</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>Concept: Docker Containerization</h1>
+<body class="bg-dark text-light">
 
-        <!-- Part 1: Concept -->
-        <div class="copy-container">
-            <h2>🧠 The Concept</h2>
-            <button class="copy-btn" data-copy-target="#concept-text-1">Copy Text</button>
-        </div>
-        <div id="concept-text-1">
-            <p>
-                Docker works by packaging an application, along with all its necessary libraries and dependencies, into a single, isolated unit called a "container." This container can then run on any machine with Docker installed, ensuring it works the same everywhere.
-            </p>
-        </div>
+    <header id="header-placeholder"></header>
 
-        <!-- Mermaid Diagram is part of the concept -->
-        <pre class="mermaid">
-            graph TD
-                subgraph host["Host Machine"]
-                    subgraph container["Docker Container 🐳"]
-                        direction LR
-                        app["Application Code"] --> deps["Dependencies & Libraries"]
-                    end
-                end
+    <main class="container" style="margin-top: 80px;">
+        <div class="row">
+            <div class="col-lg-10 col-xl-8 mx-auto">
 
-                container --> deployed["Runs Anywhere!"]
-        </pre>
+                <h1>Concept: Docker Containerization</h1>
 
-        <!-- AI Image Prompt -->
-        <div class="copy-container">
-            <h2>🎨 AI Image Prompt</h2>
-            <button class="copy-btn" data-copy-target="#image-prompt-1">Copy Prompt</button>
-        </div>
-        <div id="image-prompt-1">
-            <p>As a video production assistant creating assets for an online video course, generate clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. The style should be minimalist, vector, clear, and suitable for an educational animation.</p>
-        </div>
+                <!-- Part 1: Concept -->
+                <div class="copy-container">
+                    <h2>🧠 The Concept</h2>
+                    <button class="copy-btn" data-copy-target="#concept-text-1">Copy Text</button>
+                </div>
+                <div id="concept-text-1">
+                    <p>Docker works by packaging an application, along with all its necessary libraries and dependencies, into a single, isolated unit called a "container." This container can then run on any machine with Docker installed, ensuring it works the same everywhere.</p>
+                </div>
 
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
+                <!-- Mermaid Diagram -->
+                <pre class="mermaid">graph TD
+    subgraph host["Host Machine"]
+        subgraph container["Docker Container 🐳"]
+            direction LR
+            app["Application Code"] --> deps["Dependencies & Libraries"]
+        end
+    end
+    container --> deployed["Runs Anywhere!"]
+</pre>
 
-        <!-- Part 3: Steps in Canva -->
-        <h2>📝 Steps in Canva</h2>
-        <ol>
-            <li><strong>Objects:</strong> Add icons for your application and its dependencies.</li>
-            <li><strong>Container:</strong> Add a shipping container icon and apply a <strong>"Drift"</strong> animation.</li>
-            <li><strong>Packaging:</strong> Animate the app/dependency icons to move inside the container using the <strong>"Pop"</strong> effect.</li>
-            <li><strong>Timing:</strong> Use the timeline to ensure the packaging happens *after* the container arrives.</li>
-        </ol>
+                <!-- AI Image Prompt -->
+                <div class="copy-container">
+                    <h2>🎨 AI Image Prompt</h2>
+                    <button class="copy-btn" data-copy-target="#image-prompt-1">Copy Prompt</button>
+                </div>
+                <div id="image-prompt-1">
+                    <p>As a video production assistant creating assets for an online video course, generate clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. The style should be minimalist, vector, clear, and suitable for an educational animation.</p>
+                </div>
 
-        <!-- Part 4: Process in Detail -->
-        <h2>🖱️ Process in Detail</h2>
-        <div class="copy-container">
-            <h4>🔍 Asset Search Prompts</h4>
-            <button class="copy-btn" data-copy-target="#search-prompt-1">Copy</button>
-        </div>
-        <div id="search-prompt-1">
-            <p><code>simple shipping container icon vector</code>, <code>python logo icon</code>, <code>gear icon minimalist</code></p>
-        </div>
-        <p>Follow these clicks to create the animation in Canva:</p>
-        <ul class="checklist">
-            <li><strong>Step 1: Setup your canvas.</strong> Go to Canva's homepage, click "Create a design" and choose "Video" (or a custom 1080x1080px size).</li>
-            <li><strong>Step 2: Find your elements.</strong> In the editor, click the "Elements" tab on the left.
+                <!-- Part 2: Animation Idea -->
+                <h2>🎬 Animation Idea</h2>
+                <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
+                <!-- Part 3: Steps in Canva -->
+                <h2>📝 Steps in Canva</h2>
+                <ol>
+                    <li><strong>Objects:</strong> Add icons for your application and its dependencies.</li>
+                    <li><strong>Container:</strong> Add a shipping container icon and apply a <strong>"Drift"</strong> animation.</li>
+                    <li><strong>Packaging:</strong> Animate the app/dependency icons to move inside the container using the <strong>"Pop"</strong> effect.</li>
+                    <li><strong>Timing:</strong> Use the timeline to ensure the packaging happens *after* the container arrives.</li>
+                </ol>
+
+                <!-- Part 4: Process in Detail -->
+                <h2>🖱️ Process in Detail</h2>
+                <div class="copy-container">
+                    <h4>🔍 Asset Search Prompts</h4>
+                    <button class="copy-btn" data-copy-target="#search-prompt-1">Copy</button>
+                </div>
+                <div id="search-prompt-1">
+                    <p><code>simple shipping container icon vector</code>, <code>python logo icon</code>, <code>gear icon minimalist</code></p>
+                </div>
+                <p>Follow these clicks to create the animation in Canva:</p>
                 <ul class="checklist">
-                    <li>Search for "python logo" (or your app's icon) and add it.</li>
-                    <li>Search for "gear icon" and "cube" for dependencies. Add a few.</li>
-                    <li>Search for "shipping container" and choose a simple one.</li>
+                    <li><strong>Step 1: Setup your canvas.</strong> Go to Canva's homepage, click "Create a design" and choose "Video" (or a custom 1080x1080px size).</li>
+                    <li><strong>Step 2: Find your elements.</strong> In the editor, click the "Elements" tab on the left.</li>
+                    <li><strong>Step 3: Animate the container.</strong> Click on the shipping container icon you added.</li>
+                    <li><strong>Step 4: Animate the app icons.</strong> Hold the `Shift` key and click on your app logo and all dependency icons to select them all at once.</li>
+                    <li><strong>Step 5: Adjust timing.</strong> At the bottom of the editor, click the "Show timing" button (or it may already be visible).</li>
+                    <li><strong>Step 6: Download.</strong> Click "Share" (top right) → "Download". Choose "MP4 Video" as the file type and click "Download".</li>
                 </ul>
-            </li>
-            <li><strong>Step 3: Animate the container.</strong>
-                <ul class="checklist">
-                    <li>Click on the shipping container icon you added.</li>
-                    <li>In the top toolbar, click the "Animate" button.</li>
-                    <li>In the left panel, choose the "Drift" animation. You can adjust the direction if you like.</li>
-                </ul>
-            </li>
-            <li><strong>Step 4: Animate the app icons.</strong>
-                <ul class="checklist">
-                    <li>Hold the `Shift` key and click on your app logo and all dependency icons to select them all at once.</li>
-                    <li>Click "Animate" from the top toolbar again.</li>
-                    <li>Choose the "Pop" animation.</li>
-                </ul>
-            </li>
-            <li><strong>Step 5: Adjust timing.</strong>
-                <ul class="checklist">
-                    <li>At the bottom of the editor, click the "Show timing" button (or it may already be visible). This opens the timeline.</li>
-                    <li>You will see purple bars for each animation. Drag the start of the "Pop" animation bar so it begins *after* the container's "Drift" animation has finished.</li>
-                </ul>
-            </li>
-            <li><strong>Step 6: Download.</strong> Click "Share" (top right) → "Download". Choose "MP4 Video" as the file type and click "Download".</li>
-        </ul>
 
-    </div>
+            </div>
+        </div>
+    </main>
 
+    <div id="footer-placeholder"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-        mermaid.initialize({
-            startOnLoad: true,
-            theme: 'dark',
-            securityLevel: 'strict'
-        });
+        mermaid.initialize({ startOnLoad: true, theme: 'dark' });
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
     <script src="../checklist.js" defer></script>
-<div id="footer-placeholder"></div>
 </body>
 </html>
