--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -4,93 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Branching</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>Concept: Git Branching</h1>
-
-        <!-- Part 1: Concept -->
-        <div class="copy-container">
-            <h2>🧠 The Concept</h2>
-            <button class="copy-btn" data-copy-target="#concept-text-3">Copy Text</button>
-        </div>
-        <div id="concept-text-3">
-            <p>Git branching allows developers to work on new features or bug fixes in an isolated environment without affecting the main codebase (the `main` branch). Once the work is complete, the feature branch can be merged back into the main branch.</p>
-        </div>
-        <pre class="mermaid">
-            gitGraph
-               commit
-               commit id: "feat: initial work"
-               branch feature-branch 🌿
-               checkout feature-branch
-               commit
-               checkout main
-               commit id: "fix: bug in main"
-               merge feature-branch
-        </pre>
-
-        <!-- AI Image Prompt -->
-        <div class="copy-container">
-            <h2>🎨 AI Image Prompt</h2>
-            <button class="copy-btn" data-copy-target="#image-prompt-3">Copy Prompt</button>
-        </div>
-        <div id="image-prompt-3">
-            <p>As a video production assistant creating assets for an online video course, generate a diagram showing two distinct git branches (main and feature) with commits as circles on a line, then merging. The style should be a clean, vector, tech flowchart suitable for an educational animation.</p>
-        </div>
-
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This animation provides a clear visual of how a new line of development is created from a specific point in the project's history, and then merged back in.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/2eL-d4-zU6Y" title="Introduction to Git - Branching and Merging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-
-        <!-- Part 3: Steps in Canva -->
-        <h2>📝 Steps in Canva</h2>
-        <ol>
-            <li><strong>Main Branch:</strong> Create a solid line with circles on it representing commits.</li>
-            <li><strong>Feature Branch:</strong> Animate a new dashed line branching off from the main line using the <strong>"Wipe"</strong> effect.</li>
-            <li><strong>Commits:</strong> Have new commit circles appear on the feature branch using the <strong>"Pop"</strong> animation.</li>
-            <li><strong>Merge:</strong> Animate the feature branch line merging back into the main line.</li>
-        </ol>
-
-        <!-- Part 4: Process in Detail -->
-        <h2>🖱️ Process in Detail</h2>
-        <div class="copy-container">
-            <h4>🔍 Asset Search Prompts</h4>
-            <button class="copy-btn" data-copy-target="#search-prompt-3">Copy</button>
-        </div>
-        <div id="search-prompt-3">
-            <p><code>line with circles icon</code>, <code>dashed line vector</code>, <code>git branch diagram icon</code></p>
-        </div>
-        <p>Follow these clicks to create the animation in Canva:</p>
-        <ul class="checklist">
-            <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
-            <li><strong>Step 2: Create Main Branch.</strong> Use the "Line" element to draw a straight horizontal line. Add small circles on top for commits. Group them together.</li>
-            <li><strong>Step 3: Animate Branching.</strong>
+<body class="bg-dark text-light">
+    <header id="header-placeholder"></header>
+    <main class="container" style="margin-top: 80px;">
+        <div class="row">
+            <div class="col-lg-10 col-xl-8 mx-auto">
+                <h1>Concept: Git Branching</h1>
+                <!-- Part 1: Concept -->
+                <div class="copy-container">
+                    <h2>🧠 The Concept</h2>
+                    <button class="copy-btn" data-copy-target="#concept-text-3">Copy Text</button>
+                </div>
+                <div id="concept-text-3">
+                    <p>Git branching allows developers to work on new features or bug fixes in an isolated environment without affecting the main codebase (the `main` branch). Once the work is complete, the feature branch can be merged back into the main branch.</p>
+                </div>
+                <pre class="mermaid">
+                    gitGraph
+                       commit
+                       commit id: "feat: initial work"
+                       branch feature-branch
+                       checkout feature-branch
+                       commit
+                       checkout main
+                       commit id: "fix: bug in main"
+                       merge feature-branch
+                </pre>
+                <!-- AI Image Prompt -->
+                <div class="copy-container">
+                    <h2>🎨 AI Image Prompt</h2>
+                    <button class="copy-btn" data-copy-target="#image-prompt-3">Copy Prompt</button>
+                </div>
+                <div id="image-prompt-3">
+                    <p>As a video production assistant creating assets for an online video course, generate a diagram showing two distinct git branches (main and feature) with commits as circles on a line, then merging. The style should be a clean, vector, tech flowchart suitable for an educational animation.</p>
+                </div>
+                <!-- Part 2: Animation Idea -->
+                <h2>🎬 Animation Idea</h2>
+                <p>This animation provides a clear visual of how a new line of development is created from a specific point in the project's history, and then merged back in.</p>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/2eL-d4-zU6Y" title="Introduction to Git - Branching and Merging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <!-- Part 3: Steps in Canva -->
+                <h2>📝 Steps in Canva</h2>
+                <ol>
+                    <li><strong>Main Branch:</strong> Create a solid line with circles on it representing commits.</li>
+                    <li><strong>Feature Branch:</strong> Animate a new dashed line branching off from the main line using the <strong>"Wipe"</strong> effect.</li>
+                    <li><strong>Commits:</strong> Have new commit circles appear on the feature branch using the <strong>"Pop"</strong> animation.</li>
+                    <li><strong>Merge:</strong> Animate the feature branch line merging back into the main line.</li>
+                </ol>
+                <!-- Part 4: Process in Detail -->
+                <h2>🖱️ Process in Detail</h2>
+                <div class="copy-container">
+                    <h4>🔍 Asset Search Prompts</h4>
+                    <button class="copy-btn" data-copy-target="#search-prompt-3">Copy</button>
+                </div>
+                <div id="search-prompt-3">
+                    <p><code>line with circles icon</code>, <code>dashed line vector</code>, <code>git branch diagram icon</code></p>
+                </div>
+                <p>Follow these clicks to create the animation in Canva:</p>
                 <ul class="checklist">
-                    <li>Draw a new dashed line that starts from the main line and goes upwards at an angle.</li>
-                    <li>Select the dashed line, click "Animate" > <strong>"Wipe"</strong>. This will make it look like it's being drawn.</li>
-                    <li>Add new circle elements on the new branch. Select them and choose the <strong>"Pop"</strong> or <strong>"Fade"</strong> animation.</li>
+                    <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
+                    <li><strong>Step 2: Create Main Branch.</strong> Use the "Line" element to draw a straight horizontal line. Add small circles on top for commits. Group them together.</li>
+                    <li><strong>Step 3: Animate Branching.</strong> Draw a new dashed line that starts from the main line and goes upwards at an angle.</li>
+                    <li><strong>Step 4: Adjust Timing.</strong> Use the timeline to make the `Wipe` animation happen first, followed by the `Pop` animations for the new commits.</li>
+                    <li><strong>Step 5: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
                 </ul>
-            </li>
-            <li><strong>Step 4: Adjust Timing.</strong> Use the timeline to make the `Wipe` animation happen first, followed by the `Pop` animations for the new commits.</li>
-            <li><strong>Step 5: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
-        </ul>
-    </div>
+            </div>
+        </div>
+    </main>
+    <div id="footer-placeholder"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-        mermaid.initialize({
-            startOnLoad: true,
-            theme: 'dark',
-            securityLevel: 'strict'
-        });
+        mermaid.initialize({ startOnLoad: true, theme: 'dark' });
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
     <script src="../checklist.js" defer></script>
-<div id="footer-placeholder"></div>
 </body>
 </html>
