--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docker Containerization</title>
+    <base href="../">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -92,8 +93,8 @@
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
         mermaid.initialize({ startOnLoad: true, theme: 'dark' });
     </script>
-    <script src="../shared-menu.js" defer></script>
-    <script src="../copy-button.js" defer></script>
-    <script src="../checklist.js" defer></script>
+    <script src="shared-menu.js" defer></script>
+    <script src="copy-button.js" defer></script>
+    <script src="checklist.js" defer></script>
 </body>
 </html>
