--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Request/Response</title>
+    <title>API Request/Response Cycle</title>
+    <base href="../">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -92,9 +94,9 @@
             securityLevel: 'strict'
         });
     </script>
-    <script src="../shared-menu.js" defer></script>
-    <script src="../copy-button.js" defer></script>
-    <script src="../checklist.js" defer></script>
+    <script src="shared-menu.js" defer></script>
+    <script src="copy-button.js" defer></script>
+    <script src="checklist.js" defer></script>
 <div id="footer-placeholder"></div>
 </body>
 </html>
