--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kubernetes Pods & Nodes</title>
+    <base href="../">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -96,9 +97,9 @@
             securityLevel: 'strict'
         });
     </script>
-    <script src="../shared-menu.js" defer></script>
-    <script src="../copy-button.js" defer></script>
-    <script src="../checklist.js" defer></script>
+    <script src="shared-menu.js" defer></script>
+    <script src="copy-button.js" defer></script>
+    <script src="checklist.js" defer></script>
 <div id="footer-placeholder"></div>
 </body>
 </html>
