--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Merge vs. Rebase</title>
+    <base href="../">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -89,9 +91,9 @@
             securityLevel: 'strict'
         });
     </script>
-    <script src="../shared-menu.js" defer></script>
-    <script src="../copy-button.js" defer></script>
-    <script src="../checklist.js" defer></script>
+    <script src="shared-menu.js" defer></script>
+    <script src="copy-button.js" defer></script>
+    <script src="checklist.js" defer></script>
 <div id="footer-placeholder"></div>
 </body>
 </html>
