--- a/7_testing/index.html
+++ b/7_testing/index.html
@@ -11,5 +11,16 @@
     <ul id="test-results"></ul>
     <iframe src="5_Symbols/index.html" id="app-frame" style="display:none;"></iframe>
     <script src="7_testing/test.js"></script>
+    <header id="header-placeholder"></header>
+
+    <main class="container text-center" style="margin-top: 80px;">
+        <div class="row">
+            <div class="col-md-10 mx-auto">
+
+
+    <div id="footer-placeholder"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="shared-menu.js" defer></script>
 </body>
 </html>
