--- a/7_testing/index.html
+++ b/7_testing/index.html
@@ -5,22 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UI Tests</title>
     <base href="../">
+    <base href="../5_Symbols/">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>UI Test Results</h1>
     <ul id="test-results"></ul>
     <iframe src="5_Symbols/index.html" id="app-frame" style="display:none;"></iframe>
     <script src="7_testing/test.js"></script>
+<body class="bg-dark text-light">
     <header id="header-placeholder"></header>
 
     <main class="container text-center" style="margin-top: 80px;">
         <div class="row">
             <div class="col-md-10 mx-auto">
+                <h1>UI Test Results</h1>
+                <ul id="test-results" class="list-group text-start my-4"></ul>
+            </div>
+        </div>
+    </main>
 
 
     <div id="footer-placeholder"></div>
 
+    <!-- Hidden iframe for running tests against the main app -->
+    <iframe src="index.html" id="app-frame" style="display:none;"></iframe>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../7_testing/test.js"></script>
     <script src="shared-menu.js" defer></script>
 </body>
 </html>
