fix(testing): Rebuild test page to use shared layout

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -10,7 +10,57 @@
 </head>
 <body class="bg-dark text-light">
 
-    <header id="header-placeholder"></header>
+    <header id="header-placeholder"><nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">🏠 Animated Tech Concepts</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNavbar">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="conceptsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                📚 Concepts
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="conceptsDropdown">
+                                <li><a class="dropdown-item" href="1-docker-containerization.html">1. Docker</a></li>
+                                <li><a class="dropdown-item" href="2-ci-cd-pipeline.html">2. CI/CD</a></li>
+                                <li><a class="dropdown-item" href="3-git-branching.html">3. Git Branching</a></li>
+                                <li><a class="dropdown-item" href="4-api-cycle.html">4. API Cycle</a></li>
+                                <li><a class="dropdown-item" href="5-kubernetes-pods.html">5. K8s Pods</a></li>
+                                <li><a class="dropdown-item" href="6-css-box-model.html">6. CSS Box Model</a></li>
+                                <li><a class="dropdown-item" href="7-env-variables.html">7. Env Variables</a></li>
+                                <li><a class="dropdown-item" href="8-git-merge-rebase.html">8. Git Merge/Rebase</a></li>
+                                <li><a class="dropdown-item" href="9-prometheus-scraping.html">9. Prometheus</a></li>
+                                <li><a class="dropdown-item" href="10-js-event-loop.html">10. Event Loop</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="workflowDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                📄 Workflow
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="workflowDropdown">
+                                <li><a class="dropdown-item" href="../render.html?page=../../gemini.md">Overall Process</a></li>
+                                <li><a class="dropdown-item" href="../render.html?page=../../4_formulas/01_end_to_end_workflow.md">1. End-to-End Workflow</a></li>
+                                <li><a class="dropdown-item" href="../render.html?page=../../4_formulas/02_canva_animation_guide.md">2. Canva Guide</a></li>
+                                <li><a class="dropdown-item" href="../render.html?page=../../4_formulas/03_advanced_video_with_davinci.md">3. DaVinci Guide</a></li>
+                                <li><a class="dropdown-item" href="../render.html?page=../../4_formulas/04_diagrams_with_mermaid.md">4. Mermaid Guide</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="envDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                🌍 Environments
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="envDropdown">
+                                <li><a class="dropdown-item" href="../render.html?page=../../2_environments/deployments.md">Deployments</a></li>
+                                <li><a class="dropdown-item" href="../render.html?page=../../2_environments/cloud_canva.md">Cloud: Canva</a></li>
+                                <li><a class="dropdown-item" href="../render.html?page=../../2_environments/local_davinci_resolve.md">Local: DaVinci Resolve</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav></header>
 
     <main class="container" style="margin-top: 80px;">
         <div class="row">
