feat: Add sound effects prompt for JavaScript event loop animation

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -97,6 +97,15 @@
                     <p>As a video production assistant creating assets for an online video course, generate clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. The style should be minimalist, vector, clear, and suitable for an educational animation.</p>
                 </div>
 
+                <!-- Sound Effects Prompt -->
+                <div class="copy-container">
+                    <h4>🔊 Sound Effects Prompt</h4>
+                    <button class="copy-btn" data-copy-target="#sfx-prompt-1">Copy Prompt</button>
+                </div>
+                <div id="sfx-prompt-1">
+                    <p>Generate sound effects for a short tech animation. I need: 1. A 'whoosh' sound for a container sliding in. 2. A series of light, quick 'pop' or 'click' sounds for items being placed inside the container. The style should be clean and minimalist.</p>
+                </div>
+
                 <!-- Part 2: Animation Idea -->
                 <h2>🎬 Animation Idea</h2>
                 <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
