--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -41,6 +41,15 @@
                 <div id="image-prompt-3">
                     <p>As a video production assistant creating assets for an online video course, generate a diagram showing two distinct git branches (main and feature) with commits as circles on a line, then merging. The style should be a clean, vector, tech flowchart suitable for an educational animation.</p>
                 </div>
+                <!-- Sound Effects Prompt -->
+                <div class="copy-container">
+                    <h4>🔊 Sound Effects Prompt</h4>
+                    <button class="copy-btn" data-copy-target="#sfx-prompt-3">Copy Prompt</button>
+                </div>
+                <div id="sfx-prompt-3">
+                    <p>Generate sound effects for a short tech animation. I need: 1. A 'swoosh' or 'whip' sound for a new line branching off. 2. A few short 'pop' sounds for new circles appearing on the line. 3. A final 'swoosh' and gentle 'click' for the line merging back. The style should be clean and minimalist.</p>
+                </div>
+
                 <!-- Part 2: Animation Idea -->
                 <h2>🎬 Animation Idea</h2>
                 <p>This animation provides a clear visual of how a new line of development is created from a specific point in the project's history, and then merged back in.</p>
