--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -39,6 +39,15 @@
             <p>As a video production assistant creating assets for an online video course, generate a technical diagram of a set of nested, concentric boxes labeled Margin, Border, Padding, and Content. The style should be clean, minimalist, and clearly show the layers for an educational animation.</p>
         </div>
 
+        <!-- Sound Effects Prompt -->
+        <div class="copy-container">
+            <h4>🔊 Sound Effects Prompt</h4>
+            <button class="copy-btn" data-copy-target="#sfx-prompt-6">Copy Prompt</button>
+        </div>
+        <div id="sfx-prompt-6">
+            <p>Generate sound effects for a short tech animation. I need four distinct sounds for layers appearing: 1. A soft 'inhale/exhale' or 'whoosh' (Breathe). 2. A quick 'swoosh' (Wipe). 3. A gentle 'shimmer' or 'fade-in' sound (Fade). The style should be clean and minimalist.</p>
+        </div>
+
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This animation builds the box model layer by layer, making the relationship between the different parts intuitive and easy to remember.</p>
