--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -43,6 +43,15 @@
             <p>As a video production assistant creating assets for an online video course, generate a tech diagram with a file icon (.env) and a Docker container icon. A key icon should be shown moving from the file to the container. The style should be clean, vector, and suitable for an educational animation.</p>
         </div>
 
+        <!-- Sound Effects Prompt -->
+        <div class="copy-container">
+            <h4>🔊 Sound Effects Prompt</h4>
+            <button class="copy-btn" data-copy-target="#sfx-prompt-7">Copy Prompt</button>
+        </div>
+        <div id="sfx-prompt-7">
+            <p>Generate sound effects for a short tech animation. I need: 1. A 'whoosh' sound for a line of text moving across the screen. 2. A 'digital blip' or 'shimmer' sound for text fading in and out. The style should be clean and minimalist.</p>
+        </div>
+
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This animation clearly shows that configuration is injected from an external source at runtime, decoupling it from the application code.</p>
