--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -45,6 +45,15 @@
             <p>As a video production assistant creating assets for an online video course, generate a monitoring system diagram with a central Prometheus logo and several smaller application icons. A magnifying glass should be shown moving between them. The style should be clean, vector, and clear for an educational animation.</p>
         </div>
 
+        <!-- Sound Effects Prompt -->
+        <div class="copy-container">
+            <h4>🔊 Sound Effects Prompt</h4>
+            <button class="copy-btn" data-copy-target="#sfx-prompt-9">Copy Prompt</button>
+        </div>
+        <div id="sfx-prompt-9">
+            <p>Generate sound effects for a short tech animation loop. I need: 1. A 'whoosh' sound for an icon moving from a central point to an outer point. 2. A 'sonar ping' or 'heartbeat' sound. 3. A second 'whoosh' for the icon returning to the center. The style should be clean and minimalist.</p>
+        </div>
+
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This animation clarifies the "pull-based" model of Prometheus, showing it actively going out to gather metrics from different applications in a repeating loop.</p>
