Implement code changes to enhance functionality and improve performance

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -106,11 +106,20 @@
                     <p>Generate sound effects for a short tech animation. I need: 1. A 'whoosh' sound for a container sliding in. 2. A series of light, quick 'pop' or 'click' sounds for items being placed inside the container. The style should be clean and minimalist.</p>
                 </div>
 
-                <!-- Part 2: Animation Idea -->
-                <h2>🎬 Animation Idea</h2>
-                <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <!-- Part 2: Animation Idea (Collapsible) -->
+                <div class="animation-section">
+                    <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-1" aria-expanded="false" aria-controls="animation-1">
+                        🎬 Animation Idea
+                        <span class="toggle-icon">▼</span>
+                    </button>
+                    <div class="collapse" id="animation-1">
+                        <div class="animation-content">
+                            <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Part 3: Steps in Canva -->
