feat: Add collapsible animation ideas and sound effects prompts across multiple concepts

--- a/5_Symbols/concepts/10-js-event-loop.html
+++ b/5_Symbols/concepts/10-js-event-loop.html
@@ -43,15 +43,6 @@
             <p>As a video production assistant creating assets for an online video course, generate a minimalist diagram of the JavaScript event loop with three labeled boxes: Call Stack, Web API, and Callback Queue, and a task block moving between them. The style should be a clean, vector diagram for an educational animation.</p>
         </div>
 
-        <!-- Sound Effects Prompt -->
-        <div class="copy-container">
-            <h4>🔊 Sound Effects Prompt</h4>
-            <button class="copy-btn" data-copy-target="#sfx-prompt-10">Copy Prompt</button>
-        </div>
-        <div id="sfx-prompt-10">
-            <p>Generate sound effects for a short tech animation. I need a series of 'whoosh' sounds for a task block moving between three different areas. The final 'whoosh' should end with a satisfying 'click' or 'pop' as it lands back in the first box. The style should be clean and minimalist.</p>
-        </div>
-
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>Animating the journey of an asynchronous task through the different parts of the browser environment makes the complex JavaScript event loop far easier to comprehend than a static diagram.</p>
@@ -99,5 +90,7 @@
     <script src="shared-menu.js" defer></script>
     <script src="copy-button.js" defer></script>
     <script src="checklist.js" defer></script>
+</body>
+</html>
 </body>
 </html>
