--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -97,29 +97,11 @@
                     <p>As a video production assistant creating assets for an online video course, generate clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. The style should be minimalist, vector, clear, and suitable for an educational animation.</p>
                 </div>
 
-                <!-- Sound Effects Prompt -->
-                <div class="copy-container">
-                    <h4>🔊 Sound Effects Prompt</h4>
-                    <button class="copy-btn" data-copy-target="#sfx-prompt-1">Copy Prompt</button>
-                </div>
-                <div id="sfx-prompt-1">
-                    <p>Generate sound effects for a short tech animation. I need: 1. A 'whoosh' sound for a container sliding in. 2. A series of light, quick 'pop' or 'click' sounds for items being placed inside the container. The style should be clean and minimalist.</p>
-                </div>
-
-                <!-- Part 2: Animation Idea (Collapsible) -->
-                <div class="animation-section">
-                    <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-1" aria-expanded="false" aria-controls="animation-1">
-                        🎬 Animation Idea
-                        <span class="toggle-icon">▼</span>
-                    </button>
-                    <div class="collapse" id="animation-1">
-                        <div class="animation-content">
-                            <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
-                            <div class="video-container">
-                                <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
+                <!-- Part 2: Animation Idea -->
+                <h2>🎬 Animation Idea</h2>
+                <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
 
                 <!-- Part 3: Steps in Canva -->
