--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -42,11 +42,20 @@
             <p>As a video production assistant creating assets for an online video course, generate a minimalist network diagram with a laptop icon (Client) and a server icon (Server). Show a data packet arrow for the 'Request' and another for the 'Response'. The style should be clean, vector, and clear for an educational animation.</p>
         </div>
 
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This animation makes the abstract concept of a client-server data exchange tangible and easy for beginners to follow by visualizing the data as a traveling object.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/s7wmiS2mSVE" title="What is an API?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- Part 2: Animation Idea (Collapsible) -->
+        <div class="animation-section">
+            <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-4" aria-expanded="false" aria-controls="animation-4">
+                🎬 Animation Idea
+                <span class="toggle-icon">▼</span>
+            </button>
+            <div class="collapse" id="animation-4">
+                <div class="animation-content">
+                    <p>This animation makes the abstract concept of a client-server data exchange tangible and easy for beginners to follow by visualizing the data as a traveling object.</p>
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/s7wmiS2mSVE" title="What is an API?" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Part 3: Steps in Canva -->
