--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -39,20 +39,20 @@
             <p>As a video production assistant creating assets for an online video course, generate a technical diagram of a set of nested, concentric boxes labeled Margin, Border, Padding, and Content. The style should be clean, minimalist, and clearly show the layers for an educational animation.</p>
         </div>
 
-        <!-- Sound Effects Prompt -->
-        <div class="copy-container">
-            <h4>🔊 Sound Effects Prompt</h4>
-            <button class="copy-btn" data-copy-target="#sfx-prompt-6">Copy Prompt</button>
-        </div>
-        <div id="sfx-prompt-6">
-            <p>Generate sound effects for a short tech animation. I need four distinct sounds for layers appearing: 1. A soft 'inhale/exhale' or 'whoosh' (Breathe). 2. A quick 'swoosh' (Wipe). 3. A gentle 'shimmer' or 'fade-in' sound (Fade). The style should be clean and minimalist.</p>
-        </div>
-
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This animation builds the box model layer by layer, making the relationship between the different parts intuitive and easy to remember.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/-21mO8Ixl5M" title="CSS Box Model Explained in 4 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- Part 2: Animation Idea (Collapsible) -->
+        <div class="animation-section">
+            <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-6" aria-expanded="false" aria-controls="animation-6">
+                🎬 Animation Idea
+                <span class="toggle-icon">▼</span>
+            </button>
+            <div class="collapse" id="animation-6">
+                <div class="animation-content">
+                    <p>This animation builds the box model layer by layer, making the relationship between the different parts intuitive and easy to remember.</p>
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/-21mO8Ixl5M" title="CSS Box Model Explained in 4 Minutes" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Part 3: Steps in Canva -->
@@ -96,5 +96,7 @@
     <script src="shared-menu.js" defer></script>
     <script src="copy-button.js" defer></script>
     <script src="checklist.js" defer></script>
+</body>
+</html>
 </body>
 </html>
