--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -43,20 +43,20 @@
             <p>As a video production assistant creating assets for an online video course, generate a tech diagram with a file icon (.env) and a Docker container icon. A key icon should be shown moving from the file to the container. The style should be clean, vector, and suitable for an educational animation.</p>
         </div>
 
-        <!-- Sound Effects Prompt -->
-        <div class="copy-container">
-            <h4>🔊 Sound Effects Prompt</h4>
-            <button class="copy-btn" data-copy-target="#sfx-prompt-7">Copy Prompt</button>
-        </div>
-        <div id="sfx-prompt-7">
-            <p>Generate sound effects for a short tech animation. I need: 1. A 'whoosh' sound for a line of text moving across the screen. 2. A 'digital blip' or 'shimmer' sound for text fading in and out. The style should be clean and minimalist.</p>
-        </div>
-
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This animation clearly shows that configuration is injected from an external source at runtime, decoupling it from the application code.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/1c2jGg_p_n8" title="How to Use Environment Variables" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- Part 2: Animation Idea (Collapsible) -->
+        <div class="animation-section">
+            <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-7" aria-expanded="false" aria-controls="animation-7">
+                🎬 Animation Idea
+                <span class="toggle-icon">▼</span>
+            </button>
+            <div class="collapse" id="animation-7">
+                <div class="animation-content">
+                    <p>This animation clearly shows that configuration is injected from an external source at runtime, decoupling it from the application code.</p>
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/1c2jGg_p_n8" title="How to Use Environment Variables" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Part 3: Steps in Canva -->
@@ -105,5 +105,7 @@
     <script src="shared-menu.js" defer></script>
     <script src="copy-button.js" defer></script>
     <script src="checklist.js" defer></script>
+</body>
+</html>
 </body>
 </html>
