--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -43,11 +43,20 @@
             <p>As a video production assistant creating assets for an online video course, generate two diagrams side-by-side comparing Git Merge and Git Rebase. The style should be a clean, vector, tech flowchart, perfect for an educational animation.</p>
         </div>
 
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This provides a direct visual comparison of the two commands, highlighting the critical difference in their resulting project history (a new commit vs. a linear sequence).</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/_P3j22bZ1zo" title="Git Rebase Vs Git Merge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- Part 2: Animation Idea (Collapsible) -->
+        <div class="animation-section">
+            <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-8" aria-expanded="false" aria-controls="animation-8">
+                🎬 Animation Idea
+                <span class="toggle-icon">▼</span>
+            </button>
+            <div class="collapse" id="animation-8">
+                <div class="animation-content">
+                    <p>This provides a direct visual comparison of the two commands, highlighting the critical difference in their resulting project history (a new commit vs. a linear sequence).</p>
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/_P3j22bZ1zo" title="Git Rebase Vs Git Merge" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Part 3: Steps in Canva -->
