--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -45,20 +45,20 @@
             <p>As a video production assistant creating assets for an online video course, generate a monitoring system diagram with a central Prometheus logo and several smaller application icons. A magnifying glass should be shown moving between them. The style should be clean, vector, and clear for an educational animation.</p>
         </div>
 
-        <!-- Sound Effects Prompt -->
-        <div class="copy-container">
-            <h4>🔊 Sound Effects Prompt</h4>
-            <button class="copy-btn" data-copy-target="#sfx-prompt-9">Copy Prompt</button>
-        </div>
-        <div id="sfx-prompt-9">
-            <p>Generate sound effects for a short tech animation loop. I need: 1. A 'whoosh' sound for an icon moving from a central point to an outer point. 2. A 'sonar ping' or 'heartbeat' sound. 3. A second 'whoosh' for the icon returning to the center. The style should be clean and minimalist.</p>
-        </div>
-
-        <!-- Part 2: Animation Idea -->
-        <h2>🎬 Animation Idea</h2>
-        <p>This animation clarifies the "pull-based" model of Prometheus, showing it actively going out to gather metrics from different applications in a repeating loop.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/_M3R-M09-I" title="Prometheus Monitoring for Beginners" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- Part 2: Animation Idea (Collapsible) -->
+        <div class="animation-section">
+            <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-9" aria-expanded="false" aria-controls="animation-9">
+                🎬 Animation Idea
+                <span class="toggle-icon">▼</span>
+            </button>
+            <div class="collapse" id="animation-9">
+                <div class="animation-content">
+                    <p>This animation clarifies the "pull-based" model of Prometheus, showing it actively going out to gather metrics from different applications in a repeating loop.</p>
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/_M3R-M09-I" title="Prometheus Monitoring for Beginners" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Part 3: Steps in Canva -->
@@ -103,5 +103,8 @@
     <script src="shared-menu.js" defer></script>
     <script src="copy-button.js" defer></script>
     <script src="checklist.js" defer></script>
+</body>
+</html>
+<div id="footer-placeholder"></div>
 </body>
 </html>
