feat: Add Educational Objective section to all concept pages
- Added '🎯 Why This Matters' section to all 10 concept HTML files
- Each objective explains how the animation bridges theory and practice
- Updated gemini.md to document 5-part structure (was 4-part)
- Updated workflow formula to include educational objective in planning
- Updated add new concept guide with objective writing instructions
- Updated copilot-instructions.md to reflect new 5-part page structure
- Educational objectives help learners understand the value of each visualization

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -68,6 +68,12 @@
 
                 <h1>Concept: Docker Containerization</h1>
 
+                <!-- Educational Objective -->
+                <div class="alert alert-info bg-dark border-info">
+                    <h5>🎯 Why This Matters</h5>
+                    <p>This animation helps beginners understand how Docker creates isolated, portable environments for applications. By visualizing the layered structure of containers, learners can see how code, dependencies, and runtime are packaged together—bridging the gap between abstract concepts and practical DevOps workflows.</p>
+                </div>
+
                 <!-- Part 1: Concept -->
                 <div class="copy-container">
                     <h2>🧠 The Concept</h2>
