--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -12,9 +12,16 @@
     <header id="header-placeholder"></header>
     <main class="container" style="margin-top: 80px;">
         <div class="row">
-            <div class="col-lg-10 col-xl-8 mx-auto">
+                    <div class="col-lg-10 col-xl-8 mx-auto">
                 <h1>Concept: CI/CD Pipeline</h1>
-                <!-- Part 1: Concept -->
+
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation demystifies the automated software delivery process by showing how code moves from development to production. Learners can visualize the sequential stages of testing, building, and deploying—making the abstract CI/CD workflow tangible and easier to implement in their own projects.</p>
+        </div>
+
+        <!-- Part 1: Concept -->
                 <div class="copy-container">
                     <h2>🧠 The Concept</h2>
                     <button class="copy-btn" data-copy-target="#concept-text-2">Copy Text</button>
