--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -12,9 +12,16 @@
     <header id="header-placeholder"></header>
     <main class="container" style="margin-top: 80px;">
         <div class="row">
-            <div class="col-lg-10 col-xl-8 mx-auto">
-                <h1>Concept: Git Branching</h1>
-                <!-- Part 1: Concept -->
+                    <div class="col-lg-10 col-xl-8 mx-auto">
+                <h1>Concept: Git Branching & Merging</h1>
+
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation clarifies one of Git's most powerful features by visualizing how code can evolve in parallel paths and come back together. Beginners often struggle with the abstract concept of branches—this visual representation makes collaborative development workflows intuitive and accessible.</p>
+        </div>
+
+        <!-- Part 1: Concept -->
                 <div class="copy-container">
                     <h2>🧠 The Concept</h2>
                     <button class="copy-btn" data-copy-target="#concept-text-3">Copy Text</button>
