--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -15,6 +15,12 @@
             <div class="col-lg-10 col-xl-8 mx-auto">
                 <h1>Concept: API Request/Response</h1>
 
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation makes the invisible communication between systems visible and understandable. By showing the journey of requests and responses as tangible objects, learners grasp the fundamental flow of API communication—essential knowledge for modern web development and system integration.</p>
+        </div>
+
         <!-- Part 1: Concept -->
         <div class="copy-container">
             <h2>🧠 The Concept</h2>
