--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -12,8 +12,14 @@
     <header id="header-placeholder"></header>
     <main class="container" style="margin-top: 80px;">
         <div class="row">
-            <div class="col-lg-10 col-xl-8 mx-auto">
-                <h1>Concept: Kubernetes Pods & Nodes</h1>
+                    <div class="col-lg-10 col-xl-8 mx-auto">
+                <h1>Concept: Kubernetes Pods</h1>
+
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation simplifies Kubernetes' complex container orchestration by focusing on its fundamental building block: the Pod. Learners can see how multiple containers work together as a single deployable unit, making cloud-native architecture concepts accessible to those new to container orchestration.</p>
+        </div>
 
         <!-- Part 1: Concept -->
         <div class="copy-container">
