--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -15,6 +15,12 @@
             <div class="col-lg-10 col-xl-8 mx-auto">
                 <h1>Concept: CSS Box Model</h1>
 
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation reveals the hidden structure behind every element on a webpage. By visualizing the nested layers of content, padding, border, and margin, learners understand why elements behave the way they do—solving one of the most common pain points in web design and layout.</p>
+        </div>
+
         <!-- Part 1: Concept -->
         <div class="copy-container">
             <h2>🧠 The Concept</h2>
