--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -15,6 +15,12 @@
             <div class="col-lg-10 col-xl-8 mx-auto">
                 <h1>Concept: Environment Variables</h1>
 
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation demonstrates a critical security and deployment practice by showing how sensitive data flows separately from code. Beginners learn why hardcoding secrets is dangerous and how environment variables enable the same application to run in different contexts—a fundamental DevOps concept.</p>
+        </div>
+
         <!-- Part 1: Concept -->
         <div class="copy-container">
             <h2>🧠 The Concept</h2>
