--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -12,8 +12,14 @@
     <header id="header-placeholder"></header>
     <main class="container" style="margin-top: 80px;">
         <div class="row">
-            <div class="col-lg-10 col-xl-8 mx-auto">
-                <h1>Concept: Git Merge vs. Rebase</h1>
+        <div class="col-lg-10 col-xl-8 mx-auto">
+                <h1>Concept: Git Merge vs Rebase</h1>
+
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation clarifies a common Git dilemma by visually comparing two different approaches to integrating code changes. Learners see the structural differences between merge and rebase strategies, helping them choose the right tool for clean commit histories and effective team collaboration.</p>
+        </div>
 
         <!-- Part 1: Concept -->
         <div class="copy-container">
