--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -12,8 +12,14 @@
     <header id="header-placeholder"></header>
     <main class="container" style="margin-top: 80px;">
         <div class="row">
-            <div class="col-lg-10 col-xl-8 mx-auto">
-                <h1>Concept: Prometheus Scraping</h1>
+                    <div class="col-lg-10 col-xl-8 mx-auto">
+                <h1>Concept: Prometheus Metrics Scraping</h1>
+
+        <!-- Educational Objective -->
+        <div class="alert alert-info bg-dark border-info">
+            <h5>🎯 Why This Matters</h5>
+            <p>This animation demystifies modern observability by showing how monitoring systems collect performance data. Beginners learn the pull-based model of metrics collection—understanding how Prometheus gathers information helps them build reliable, observable systems in production environments.</p>
+        </div>
 
         <!-- Part 1: Concept -->
         <div class="copy-container">
